# rust-grpc-sqlite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
docs/: REST_LAYER_DECISION.md
proto/: task.proto  todo.proto  user.proto
proto/task/: task.proto
proto/user/: user.proto
src/: db.rs  grpc_server.rs  lib.rs  main.rs  rest_server.rs
src/controller/: task.rs  user.rs
src/repository/: mod.rs  task.rs  user.rs
src/rest/: mod.rs  task_handlers.rs  user_handlers.rs
src/service/: mod.rs  task_service.rs  user_service.rs
tests/: grpc_integration.rs  rest_integration.rs
tests/common/: mod.rs
