[package]
name = "grpc-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC with tonic
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# Database with sqlx
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# REST API with axum
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
