[package]
name = "rust-grpc-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_grpc_sqlite"
path = "src/lib.rs"

[[bin]]
name = "rust-grpc-sqlite"
path = "src/main.rs"

[dependencies]
# gRPC with tonic
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# REST API with axum
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Database with sqlx
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Async trait support
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-stream = "0.1"
